# revealer

./: CMakeLists.txt  README.md
application_tests/: conftest.py  test_revealer.py
cmake/: fetch_fmt.cmake  fetch_gtest.cmake  fetch_microtar.cmake  fetch_rangev3.cmake
src/: collect_tarball_items.cpp  collect_tarball_items.h  create_tarball.cpp  create_tarball.h  file_creation_listener.h  main.cpp  pattern_matcher.h  tarball_item.h  triggering_file_pattern.h  utils.h  valid_file_pattern.h
src/argument_parsing/: parse_arguments.cpp  parse_arguments.h  user_input.h
src/collectors/: collector.h  disk_usage_collector.cpp  disk_usage_collector.h  path_collector.cpp  path_collector.h
test/: CMakeLists.txt  collect_tarball_items_test.cpp  disk_usage_collector_test.cpp  file_creation_listener_test.cpp  file_name_trigger_test.cpp  filesystem_utils.h  path_collector_test.cpp
